2004-06-25 Magnus Hagdorn
 * added start and end time (glide_setup.f90, glide_types.f90, simple_glide.f90)
 * added and used logging
	
2004-06-24 Magnus Hagdorn
 * fixed problem with time derivative, where we divide by zero at the first time step
   now we set the derivative to zero (glimmer_thck.f90)
 * fixed problem with gradient where the mask array was of a different size than the
   array of which the derivatives are taken. We now just calculate the gradient for
   every point (glimmer_thck.f90)
 * glide.f90: reflects these changes
	
2004-06-24 Magnus Hagdorn
 * glimmer_CFproj.f90: renamed scale_factor_at_projection_origin to scale_at_orig in order to
   avoid problems with the SUN compiler
 * glimmer_isot.f90: renamed glimmer_ to glide_ 
 * glimmer_temp.f90: renamed glimmer_ to glide_,  sorted indentation, removed surface temp calculations, 
   moved flow law factor calculations around
 * glimmer_thck.f90: renamed glimmer_ to glide_, removed mass balance calculation
 * glimmer_velo.f90: renamed glimmer_ to glide_
 * ncdf_vars.def: re-enabled lat/lon
 * simple_glide.f90: add time loop
 * glide_types.f90: add lat/lon
 * glide_setup.f90: add masking function from glimmer_setup, fix option checking bug
 * glide.f90: add time step

2004-06-23 Magnus Hagdorn
 * make mapping variable optional (glimmer_CFproj.f90, generate_ncvars.py, ncdf_file.f90.in, ncdf_file.f90.in)
 * rename glimmer -> glide (ncdf_file.f90.in, ncdf_infile.f90.in, ncdf_params.f90.in)
 * ncdf_vars.def: disabled some variables for now
 * ncdf.f90.in: cosmetics
 * glide_setup.f90: added some functions from glimmer_setup.f90
 * glide_types.f90: added massbalance and surface temperature fields, added allocation/deallocation procedures
 * glide.f90: the main ice sheet model procedures, so far: initialisation and finalisation routines
 * added simple EISMINT type model (simple_glide.f90, simple_forcing.f90)
 * added data for simple EISMINT runs (sigma.data, simple1.config)
 * Makefile: handle new files
	